--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+spring.config.import=file:env.properties
+server.port=3001
+# Postgres config
+spring.datasource.username=postgres
+spring.datasource.password=$1F$colomn
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestionedispositivi
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=public
+cloudinary.name=${CLOUDINARY_NAME}
+cloudinary.apikey=${CLOUDINARY_KEY}
+cloudinary.secret=${CLOUDINARY_SECRET}
